add titles to pages missing it, changed the config of the header menu

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ github_username:  Elaoin
 show_excerpts: true
 formspree_id: mlelknzd
 
+header_pages:
+  - about.md
+
 # Build settings
 markdown: kramdown
 theme: minima
